--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Ed-Travel</title>
 <link rel="stylesheet" href="styles.css">
+<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel="stylesheet">
+<script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 </head>
 <body>
 
 <div class="header">
-  <div class="logo">Di-Travel</div>
+  <h1><div class="logo">Di-Travel</div></h1>
   <div class="nav">
-
     <button class="button"><li><a class="item-nav"><img src="images/plane-alt-solid-24.png">Vuelos</a></li></button>
     <button class="button2"><li><a class="item-nav" target="_blank"><img src="images/car-solid-24.png">Alquiler de carros</a></li></button>
     <button class="button3"><li><a class="item-nav" target="_blank"><img src="images/book-regular-24.png" alt="book">Librerías</a></li></button>
-    <img src="images/goku.jpg" alt="Accesibilidad" class="img1"></a>
+    <img src="images/undraw_Aircraft_re_m05i.png" alt="Accesibilidad" class="img1"></a>
   </div>
 </div>
-<center>
+
   <div class="label">
     <select class="city" name="ciudad" id="">
     <option value="">Ciudad de destino</option>
@@ -49,13 +50,63 @@
    </select>
 </div>
 </center>
-<div class="son1">
-<div class="mn-son">
-  <h3>Armenia</h3>
-  <img src="images/armenia.jpg" alt="">
-</div>
-</div>
 
+<div class="f">
+  <div class="armenia">
+    <div class="tittle">Armenia</div>
+    <img src="images/armenia.jpg" alt=""class="img">
+  </div>
+  <div class="meta">
+    <div class="tittle">Meta</div>
+    <img src="images/Meta.jpeg" alt=""class="img">
+  </div>
+
+  <div class="nariño">
+    <div class="tittle">Nariño</div>
+    <img src="images/Nariño.jpg" alt=""class="img">
+  </div>
+
+  <div class="cartagena">
+    <div class="tittle">Cartagena</div>
+    <img src="images/Cartagena.webp" alt=""class="img">
+  </div>
+
+  <div class="san_andres">
+    <div class="tittle">San Andres</div>
+    <img src="images/san-andres.webp" alt=""class="img">
+  </div>
+
+  <div class="pereira">
+    <div class="tittle">Pereira</div>
+    <img src="images/Pereira.png" alt=""class="img">
+  </div>
+
+  <div class="cali">
+    <div class="tittle">Cali</div>
+    <img src="images/Cali.avif" alt=""class="img">
+  </div>
+
+  <div class="bucaramanga">
+    <div class="tittle">Bucaramanga</div>
+    <img src="images/Bucaramanga.jpg" alt=""class="img">
+  </div>
+
+  <div class="guajira">
+    <div class="tittle">Guajira</div>
+    <img src="images/armenia.jpg" alt=""class="img">
+  </div>
+
+  <div class="medellin">
+    <div class="tittle">Medellín</div>
+    <img src="images/medellin.jpg" alt=""class="img">
+  </div>
+
+  <div class="choco">
+    <div class="tittle">Chocó</div>
+    <img src="images/choco.jpg" alt=""class="img">
+  </div>
+  </div>
+</div>
 <div class="footer">
   <div class="social-icons">
     <!-- Asegúrate de tener los derechos para usar los iconos -->
